--- a/EFI/OC/config.plist
+++ b/EFI/OC/config.plist
@@ -393,17 +393,9 @@
                     <key>AAPL,ig-platform-id</key>
                     <data>AACbPg==</data>
                     <key>device-id</key>
-                    <data>mz4AAA==</data>
-                    <key>framebuffer-con1-busid</key>
-                    <data>AQAAAA==</data>
-                    <key>framebuffer-con1-enable</key>
-                    <data>AQAAAA==</data>
-                    <key>framebuffer-con1-type</key>
-                    <data>AAgAAA==</data>
-                    <key>framebuffer-patch-enable</key>
-                    <data>AQAAAA==</data>
+                    <data>mz4ABg==</data>
                     <key>model</key>
-                    <string>Intel UHD Graphics 620</string>
+                    <string>Intel UHD Graphics 630</string>
                 </dict>
             </dict>
             <key>Delete</key>
